// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<empty> demo: > render [basic] correctly 1`] = `
<div class="sd-empty">
  <div class="sd-empty-image"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-empty" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
      <path d="M24 5v6m7 1 4-4m-18 4-4-4m28.5 22H28s-1 3-4 3-4-3-4-3H6.5M40 41H8a2 2 0 0 1-2-2v-8.46a2 2 0 0 1 .272-1.007l6.15-10.54A2 2 0 0 1 14.148 18H33.85a2 2 0 0 1 1.728.992l6.149 10.541A2 2 0 0 1 42 30.541V39a2 2 0 0 1-2 2Z"></path>
    </svg></div>
  <div class="sd-empty-description">暂无数据</div>
</div>
`;

exports[`<empty> demo: > render [custom] correctly 1`] = `
<div class="sd-empty">
  <div class="sd-empty-image"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
      <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z" clip-rule="evenodd"></path>
    </svg></div>
  <div class="sd-empty-description"> No data, please reload! </div>
</div>
`;
